-----------------------
PVFS2 Release ChangeLog
-----------------------

pvfs2-1.2.1-pre1
===============
- Murali Vilayannur contributed extened attribute support to the VFS interface
- Murali and Dean Hildebrand also worked on implementing readv and writev in
  the VFS interface

pvfs2-1.2.0
===============
- make server better able to handle bogus file names (David Metheny)
- better casts for ppc64
- even better configure tests for various berkely db features
- documentation updates for Fedora 4 changes
- extended attribute support (not available through VFS yet)
- nightly build infrastructure now mostly in place
- --enable-strict now works again
- new utilities: pvfs2-touch, pvfs2-stat, pvfs2-ln
- add additional write() checks to kernel module
- hold st_nlink field at 1: keeping a true count is quite hard to do
  correctly in a distributed environment
- new distribution: "varstrip"j
- better pvfs2 kernel module debugging interface (/proc/sys/pvfs2/debug)
- pvfs2 now supports setgid 
- build: avoid some warnings from gcc4
- kernel: understand new backing_dev_info format in 2.6.12
- Added DefaultNumDFiles as filesystem config option.
- Added num_dfiles tabfile option.  i
  The number of dfiles is set by searching for the first given hint in this
  order:  application hints, tabfile, server config.  The selected 
  distribution may modify the hint if neccesary.
- Phil Carns contributed general improvements and bug fixes for the dotconf
  parser.
- Added DefaultDistribution section support for server config file.  Section
  is optional and accepts Name, Param, and Value (Param and Value may be
  repeated multiple times in the section).
- added 'retry' and 'timeout' config file options
- will consult /etc/mtab as an additional source for pvfs2 tabfile entries

pvfs2-1.1.0
===============
- network protocol: more 64-bit alignment fixes
- build: hide karma details in its module.mk
- build: remove duplicate commands used for QUIET_COMPILE